--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -48,9 +48,8 @@ features = ["http"]
 proto = { package = "astria-proto", path = "../astria-proto" }
 
 impl-serde = "0.4.0"
-tokio-test = "0.4.2"
-
 figment = { workspace = true, features = ["test"] }
 jsonrpsee = { workspace = true, features = ["macros", "server"] }
 tendermint-rpc = { workspace = true }
+tokio-test = { workspace = true }
 wiremock = { workspace = true }
