--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -9,10 +9,9 @@ sync_wrapper = "0.1.2"
 
 async-trait = { workspace = true }
 base64 = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
 color-eyre = { workspace = true }
 ed25519-consensus = { workspace = true }
-figment = { workspace = true, features = ["toml", "env"] }
+figment = { workspace = true, features = ["test", "env"] }
 futures = { workspace = true }
 hex = { workspace = true }
 prost = { workspace = true }
