--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -17,6 +17,7 @@ futures = { workspace = true }
 hex = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -40,3 +41,4 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 [dev-dependencies]
 base64 = { workspace = true }
 once_cell = { workspace = true }
+astria-sequencer-validation = { path = "../astria-sequencer-validation" }
