--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
   "crates/astria-conductor",
   "crates/astria-gossipnet",
   "crates/astria-proto",
-  # "crates/astria-sequencer",
+  "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-types",
