fix(ci): build composer, and allow builds on old tags (#763)
## Summary
Enables workflow dispatches to build old tags for docker and binaries
with newer workflows, fixes the binary to build composer correctly.

## Background
We didn't build composer correctly last release, want to cut on that
tag, and want some flexibility when workflow files don't work as
intended.

## Changes
- fix binary build
- add ability to docker & binary builds to checkout old refs.

## Testing
Will need to be tested after approval

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: Build Binaries
 on:
   # TODO: allow workflow dispatch to specify which binaries to build
   workflow_dispatch:
+    inputs:
+      tag:
+        description: Git branch, or tag to build from
+        required: false
   push:
     tags:
       - "**-v[0-9]+.[0-9]+.[0-9]+"
@@ -10,31 +14,35 @@ on:
       - "**-v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
 
 jobs:
-  # TODO: Make generic and run on any tagged release
   cli:
     uses: './.github/workflows/reusable-build.yml'
     with:
       package-name: 'cli'
+      tag: ${{ inputs.tag }}
 
   conductor:
     uses: './.github/workflows/reusable-build.yml'
     with:
       package-name: 'conductor'
+      tag: ${{ inputs.tag }}
   
   composer:
     uses: './.github/workflows/reusable-build.yml'
     with:
-      package-name: 'conductor'
+      package-name: 'composer'
+      tag: ${{ inputs.tag }}
 
   sequencer:
     uses: './.github/workflows/reusable-build.yml'
     with:
       package-name: 'sequencer'
+      tag: ${{ inputs.tag }}
 
   relayer:
     uses: './.github/workflows/reusable-build.yml'
     with:
       package-name: 'sequencer-relayer'
+      tag: ${{ inputs.tag }}
 
   build:
     if: ${{ always() && !cancelled() }}
