update actions/labeler@v4 -> v5, adjust config

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,20 +1,36 @@
 ci:
-  - '.github/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - '.github/**'
 conductor:
-  - 'crates/astria-conductor/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'crates/astria-conductor/**'
 composer:
-  - 'crates/astria-composer/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'crates/astria-composer/**'
 docker:
-  - 'containerfiles/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'containerfiles/**'
 proto:
-  - 'proto/**'
-  - 'crates/astria-core/src/generated/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'proto/**'
+      - 'crates/astria-core/src/generated/**'
 sequencer:
-  - 'crates/astria-sequencer/**'
-  - 'crates/astria-sequencer-client/**'
-  - 'crates/astria-sequencer-utils/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'crates/astria-sequencer/**'
+      - 'crates/astria-sequencer-client/**'
+      - 'crates/astria-sequencer-utils/**'
 sequencer-relayer:
-  - 'crates/astria-sequencer-relayer/**'
-  - 'crates/astria-gossipnet/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'crates/astria-sequencer-relayer/**'
+      - 'crates/astria-gossipnet/**'
 documentation:
-  - 'specs/**'
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'specs/**'
