--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -1,11 +1,14 @@
 name: Repo Admin
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
-      - reopened
+  # TODO(!!!): Remove before merge
+  - pull_request
+  # TODO(!!!): Uncomment before merge
+  # pull_request_target:
+  #   types:
+  #     - opened
+  #     - edited
+  #     - synchronize
+  #     - reopened
 
 jobs:
   triage:
@@ -14,7 +17,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
+    - uses: actions/labeler@v5
 
   pr_title:
     runs-on: ubuntu-latest
