--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ axum = "0.6.16"
 base64 = "0.21"
 base64-serde = "0.7.0"
 bytes = "1"
+celestia-tendermint = "0.32.1"
 clap = "4"
 ed25519-consensus = "2.1.0"
 ethers = "2.0.11"
@@ -93,8 +94,3 @@ tracing = "0.1"
 tryhard = "0.5.1"
 which = "4.4.0"
 wiremock = "0.5"
-
-[workspace.dependencies.celestia-tendermint]
-package = "tendermint"
-git = "https://github.com/eigerco/celestia-tendermint-rs"
-rev = "bbe7de8"
