--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -14,6 +14,7 @@ homepage = "https://astria.org"
 async-trait = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
+celestia-tendermint = { workspace = true }
 hex = { workspace = true }
 metrics = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -35,14 +36,7 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 # (including jsonrpsee).
 # As none of them are reexported it is important to keep these in sync
 # when updating.
+celestia-rpc = "0.1.1"
+celestia-types = "0.1.1"
 jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
 prost = { workspace = true }
-celestia-tendermint = { workspace = true }
-
-[dependencies.celestia-rpc]
-git = "https://github.com/eigerco/celestia-node-rs"
-rev = "4862eec"
-
-[dependencies.celestia-types]
-git = "https://github.com/eigerco/celestia-node-rs"
-rev = "4862eec"
