--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -84,6 +84,8 @@ jobs:
         uses: helm/kind-action@v1 
         with:
           install_only: true
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
       - run: |
           TAG=sha-$(git rev-parse --short HEAD)
           just deploy cluster
