packages write on reusable

--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -3,6 +3,7 @@ name: Reusable Docker Build && Push Workflow
 permissions:
   contents: read
   id-token: write
+  packages: write
 
 on:
   workflow_call:
